minor changes, typos, etc.

--- a/stories/Who_is_protected_by_the_COVID-19_lockdown?_[draft].ipynb
+++ b/stories/Who_is_protected_by_the_COVID-19_lockdown?_[draft].ipynb
@@ -65,7 +65,7 @@
     "\n",
     "In case any of the data sources become unavailable in the future, a download mirror is availible [here](https://drive.google.com/drive/folders/1NXp7DtBeCbTIv49_ngdgvQpQXaaB3f8F?usp=sharing).\n",
     "\n",
-    "For simplicity this study is only focusing on England. We understand the importance of investigating all of the regions of the UK. However due to the difference of lockdown measures across the nations of the UK, and also data compatibility issues between these region, an independent analysis is required for each nation. We warmly encourage the reader to replicate our analysis with the other nations.\n",
+    "For simplicity this study is only focusing on England. We understand the importance of investigating all of the regions of the UK. However due to the difference of lockdown measures across the nations of the UK, and also data compatibility issues between these regions, an independent analysis is required for each nation. We warmly encourage the reader to replicate our analysis with the other nations.\n",
     "\n",
     "### Analysis Outline\n",
     "\n",
@@ -90,14 +90,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🔧 Setup & Data Collation"
+    "# Data collation and wrangling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "🔧We begin by setting up our environment and importing various python libraries that we will be using for the analysis. \n",
+    "## 🔧 Setup \n",
+    "\n",
+    "We begin by setting up our environment and importing various python libraries that we will be using for the analysis. \n",
     "In particular, `pandas` and `numpy` are key data science libraries used for data processing. `geopandas` will help us dealing with geospatial data. `matplotlib` and `seaborn` will help us visualise our data."
    ]
   },
@@ -751,9 +753,11 @@
     "\n",
     "For more information on how the mortality rate is calculated, [see here](https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/deaths/methodologies/userguidetomortalitystatisticsjuly2017#death-rates-ratios-and-standardisation). Simply put, this is the formula that we are assuming approximates the relationship between the age standardised rate and the mortality count:\n",
     "\n",
-    "age standardised mortality rate = standardisation factor * mortality count\n",
+    "```\n",
+    "age standardised mortality rate = [standardisation factor] * [mortality count]\n",
+    "```\n",
     "\n",
-    ":warning: The above procedure is not ideal because it assumes that the distribution of ages of those who died inside each Local Area District is constant in time, and therefore the standardisation factor we derive in one dataset (which doesn't have information about time) can be applied to the other (which has information about time)."
+    "⚠️ The above procedure is not ideal because it assumes that the distribution of ages of those who died inside each Local Area District is constant in time, and therefore the standardisation factor we derive in one dataset (which doesn't have information about time) can be applied to the other (which has information about time)."
    ]
   },
   {
