Adding links to authors github usernames.

--- a/stories/Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
+++ b/stories/Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
@@ -8,15 +8,14 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Authors\n",
-    "* **David Beavan**. The Alan Turing Institute. GitHub: @DavidBeavan. Twitter: @DavidBeavan.\n",
-    "* **Camila Rangel Smith**. The Alan Turing Institute. GitHub: @crangelsmith. Twitter: @CamilaRangelS.\n",
-    "* **Sam Van Stroud**. University College London. Github: @samvanstround.\n",
-    "* **Kevin Xu**. Civil Service. Github: @kevinxufs.\n",
+    "* **David Beavan**. The Alan Turing Institute. GitHub: [@DavidBeavan](https://github.com/DavidBeavan). Twitter: [@DavidBeavan](https://twitter.com/davidbeavan).\n",
+    "* **Camila Rangel Smith**. The Alan Turing Institute. GitHub: [@crangelsmith](https://github.com/crangelsmith). Twitter: [@CamilaRangelS](https://twitter.com/CamilaRangelS).\n",
+    "* **Sam Van Stroud**. University College London. Github: [@samvanstround](https://github.com/samvanstroud).\n",
+    "* **Kevin Xu**. Civil Service. Github: [@kevinxufs](https://github.com/kevinxufs).\n",
     "\n",
     "*All the authors above contributed to this data story story with ideas, code development and story telling.*\n",
     "\n",
