--- a/stories/Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
+++ b/stories/Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Covid19 and Deprivation\n",
+    "## COVID-19 and Deprivation\n",
     "\n",
     "Everyone in the UK has been impacted by the COVID-19 pandemic, from London to Manchester, Cardiff to Edinburgh. The virus has affected everyone, and taken many of the lives of people across Country.\n",
     "\n",
