--- a/stories/Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
+++ b/stories/Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
@@ -107,7 +107,7 @@
     "Here's a list of the different steps of the analysis:\n",
     "\n",
     "1. Download and process data from multiple deprivation and COVID-19 deaths.\n",
-    "2. Combining the different datasets into a single table by joining on geographical region.\n",
+    "2. Combine the different datasets into a single table by joining on geographical region.\n",
     "3. Calculate age standardised mortality rates from mortality counts.\n",
     "4. Replicate the ONS analysis, looking at mortality rate by region.\n",
     "5. Visualise the distribution of COVID-19 deaths across the UK.\n",
