--- a/stories/Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
+++ b/stories/Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
@@ -2062,7 +2062,7 @@
     }
    },
    "source": [
-    "# Study 2 - Mortality by Deprivation\n",
+    "# Study #2 - Mortality by Deprivation\n",
     "\n",
     "We can now study the relationship between COVID-19 mortality and deprivation. To do this we will make some plots showing the standardised mortality rate as a function of the mean IMD decile for each LAD in England. Recall that the rate has been normalised by the number of days in each time period, so that they are comparable.\n",
     "\n",
