--- a/stories/2020-11-20-Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
+++ b/stories/2020-11-20-Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Who was protected by the first COVID-19 lockdown in England?"
+    "# Who was protected by the first COVID-19 lockdown in England?\n",
+    "\n",
+    "- categories: [COVID-19, data wrangling, data exploration]"
    ]
   },
   {
