--- a/stories/covid-vax/covid_vax.ipynb
+++ b/stories/covid-vax/covid_vax.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# When will the UK Population be Fully Vaccinated Against Covid-19?\n",
-    "\n"
+    "\n",
+    "**Author:** Jack Roberts, [@jack89roberts](https://github.com/jack89roberts)"
    ]
   },
   {
