--- a/stories/covid-vax/covid_vax.ipynb
+++ b/stories/covid-vax/covid_vax.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# When will the UK Population be Fully Vaccinated Against Covid-19?\n",
     "\n",
-    "**Author:** Jack Roberts, [@jack89roberts](https://github.com/jack89roberts)"
+    "**Author:** Jack Roberts, The Alan Turing Institute, [@jack89roberts](https://github.com/jack89roberts)"
    ]
   },
   {
