last read through

--- a/stories/covid-vax/covid_vax.ipynb
+++ b/stories/covid-vax/covid_vax.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "The documentation for the API is found under the [\"Developer's Guide\" section](https://coronavirus.data.gov.uk/details/developers-guide) of the dashboard, which describes the various parameters that are available and how they should be configured. In particular, there are Python examples which show us how to structure a data query. There are three main steps, as follows:\n",
     "\n",
-    "**Step 1:** Defining the geographical region we are interested in. Some of the data is available regionally as well as nationally. The number of positive cases, for example, is available both for the UK as a whole but also down to \"local authority\" level (local council areas, of which there are over 300 in England alone). It's possible to get vaccine data for each of the four nations in the UK separately, but for this story we will consider the UK as a whole.\n",
+    "**Step 1:** Defining the geographical region we are interested in. Some of the data is available regionally as well as nationally. The number of positive cases, for example, is available both for the UK as a whole but also down to \"local authority\" level (local council areas, of which there are over 300 in England alone). It's possible to get vaccine data for each of the four nations in the UK separately, but for this story we'll only consider the UK as a whole.\n",
     "\n",
     "In the API, to define that we wish to retrieve summary data for the whole UK we must set the `areaType` parameter to be the value \"overview\", as follows:"
    ]
@@ -493,7 +493,7 @@
     "\n",
     "To make sense of these numbers we are missing one more piece of data - how many people are there to vaccinate? We can find this in the [government's vaccine delivery plan](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/951928/uk-covid-19-vaccines-delivery-plan-final.pdf). The plan specifies that the UK adult population (children are not currently being vaccinated) is approximately 53 million people, as well giving the sub-totals for the nine priority groups who will receive vaccines first. Government targets typically focus on three goals - vaccinating the 15 million people in priority groups 1-4 (the over 70s, care home residents, and health & social care workers), the 32 million people in the groups 1-9 (additionally including over 50s and the clinically vulnerable), and the whole adult population. \n",
     "\n",
-    "Comparing to the numbers above, we can see that the number of people vaccinated so far exceeds the population of groups 1-9 for first doses, and of groups 1-4 for second doses. However, this doesn't mean _everyone_ in those groups has been vaccinated. Although take up rates of the vaccine in the UK are high, there is regional variation in the speed of the rollout and take up rates are lower in certain sub-groups, such as for [ethnic minorities, poorer areas](https://www.bbc.co.uk/news/health-55274833), and [care home staff](https://www.theguardian.com/society/2021/apr/14/care-home-staff-could-be-required-to-have-a-covid-vaccination-says-matt-hancock). The population in each priority group is also estimated as the groups can be overlapping. For example, a clinically vulnerable, 50 year-old social care worker meets the criteria for priority groups 2, 6 and 9. Further statistics on take up rates can be found in [NHS England data](https://www.england.nhs.uk/statistics/statistical-work-areas/covid-19-vaccinations/).\n",
+    "Comparing to the values above, we can see that the number of people vaccinated so far exceeds the population of groups 1-9 for first doses, and of groups 1-4 for second doses. However, this doesn't mean _everyone_ in those groups has been vaccinated. Although take up rates of the vaccine in the UK are high, there is regional variation in the speed of the rollout and take up rates are lower in certain sub-groups, such as for [ethnic minorities, poorer areas](https://www.bbc.co.uk/news/health-55274833), and [care home staff](https://www.theguardian.com/society/2021/apr/14/care-home-staff-could-be-required-to-have-a-covid-vaccination-says-matt-hancock). The population in each priority group is also estimated as the groups can be overlapping. For example, a clinically vulnerable, 50 year-old social care worker meets the criteria for priority groups 2, 6 and 9. Further statistics on take up rates can be found in [NHS England data](https://www.england.nhs.uk/statistics/statistical-work-areas/covid-19-vaccinations/).\n",
     "\n",
     "Bearing all the above in mind, the priority group population totals are still helpful to give a rough estimate of progress through the vaccination programme so let's save them for future use:"
    ]
@@ -912,7 +912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Currently, second doses are lagging first doses by 77 days, or around ten and a half weeks. In the history of the data so far, the delay has varied between 71 and 77 days:"
+    "Currently, second doses are lagging first doses by 77 days (eleven weeks). In the history of the data so far, the delay has varied between 71 and 77 days:"
    ]
   },
   {
