tidy up a few variables names in forecast_vaccines

--- a/stories/covid-vax/covid_vax.ipynb
+++ b/stories/covid-vax/covid_vax.ipynb
@@ -190,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "137 2500\n"
+      "127 2500\n"
      ]
     }
    ],
@@ -214,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': '2021-05-26', 'newFirst': 236119, 'cumFirst': 38614683, 'newSecond': 427458, 'cumSecond': 24043956}\n"
+      "{'date': '2021-05-16', 'newFirst': 131318, 'cumFirst': 36704672, 'newSecond': 183745, 'cumSecond': 20287403}\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -277,39 +277,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2021-05-22</th>\n",
-       "      <td>0.205410</td>\n",
-       "      <td>37.943681</td>\n",
-       "      <td>0.556951</td>\n",
-       "      <td>22.643417</td>\n",
+       "      <th>2021-05-12</th>\n",
+       "      <td>0.184210</td>\n",
+       "      <td>35.906671</td>\n",
+       "      <td>0.452437</td>\n",
+       "      <td>18.890969</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-05-23</th>\n",
-       "      <td>0.126357</td>\n",
-       "      <td>38.070038</td>\n",
-       "      <td>0.252139</td>\n",
-       "      <td>22.895556</td>\n",
+       "      <th>2021-05-13</th>\n",
+       "      <td>0.209284</td>\n",
+       "      <td>36.115955</td>\n",
+       "      <td>0.428041</td>\n",
+       "      <td>19.319010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-05-24</th>\n",
-       "      <td>0.122379</td>\n",
-       "      <td>38.192417</td>\n",
-       "      <td>0.332955</td>\n",
-       "      <td>23.228511</td>\n",
+       "      <th>2021-05-14</th>\n",
+       "      <td>0.220068</td>\n",
+       "      <td>36.336023</td>\n",
+       "      <td>0.393402</td>\n",
+       "      <td>19.712412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-05-25</th>\n",
-       "      <td>0.186147</td>\n",
-       "      <td>38.378564</td>\n",
-       "      <td>0.387987</td>\n",
-       "      <td>23.616498</td>\n",
+       "      <th>2021-05-15</th>\n",
+       "      <td>0.237331</td>\n",
+       "      <td>36.573354</td>\n",
+       "      <td>0.391246</td>\n",
+       "      <td>20.103658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-05-26</th>\n",
-       "      <td>0.236119</td>\n",
-       "      <td>38.614683</td>\n",
-       "      <td>0.427458</td>\n",
-       "      <td>24.043956</td>\n",
+       "      <th>2021-05-16</th>\n",
+       "      <td>0.131318</td>\n",
+       "      <td>36.704672</td>\n",
+       "      <td>0.183745</td>\n",
+       "      <td>20.287403</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -318,14 +318,14 @@
       "text/plain": [
        "            newFirst   cumFirst  newSecond  cumSecond\n",
        "date                                                 \n",
-       "2021-05-22  0.205410  37.943681   0.556951  22.643417\n",
-       "2021-05-23  0.126357  38.070038   0.252139  22.895556\n",
-       "2021-05-24  0.122379  38.192417   0.332955  23.228511\n",
-       "2021-05-25  0.186147  38.378564   0.387987  23.616498\n",
-       "2021-05-26  0.236119  38.614683   0.427458  24.043956"
+       "2021-05-12  0.184210  35.906671   0.452437  18.890969\n",
+       "2021-05-13  0.209284  36.115955   0.428041  19.319010\n",
+       "2021-05-14  0.220068  36.336023   0.393402  19.712412\n",
+       "2021-05-15  0.237331  36.573354   0.391246  20.103658\n",
+       "2021-05-16  0.131318  36.704672   0.183745  20.287403"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,10 +1069,9 @@
     "\n",
     "        # if there are spare doses, try giving 2nd doses earlier than usual\n",
     "        if dose1_today + dose2_today < total_doses_today:\n",
-    "            dose2_poss_req = df.loc[d - timedelta(days=min_second_delay), \"cumFirst\"]\n",
-    "            dose2_sofar = df.loc[d - timedelta(days=1), \"cumSecond\"]\n",
-    "            dose2_poss_early = max([0, dose2_poss_req - dose2_sofar])\n",
-    "            dose2_today = min(total_doses_today - dose1_today, dose2_poss_early)\n",
+    "            dose2_early_req = df.loc[d - timedelta(days=min_second_delay), \"cumFirst\"]\n",
+    "            dose2_early_pending = max([0, dose2_early_req - dose2_sofar])\n",
+    "            dose2_today = min(total_doses_today - dose1_today, dose2_early_pending)\n",
     "\n",
     "        # save today's values\n",
     "        df.loc[d, \"newSecond\"] = dose2_today\n",
@@ -1401,7 +1400,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcbe8d60d00>"
+       "<matplotlib.legend.Legend at 0x7fa710cb8a30>"
       ]
      },
      "execution_count": 32,
@@ -1543,7 +1542,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcbe8dbbd00>"
+       "<matplotlib.legend.Legend at 0x7fa6e072efa0>"
       ]
      },
      "execution_count": 34,
