--- a/stories/2020-11-20-COVID-19/2020-11-20-Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
+++ b/stories/2020-11-20-COVID-19/2020-11-20-Who_was_protected_by_the_first_COVID-19_lockdown.ipynb
@@ -5,8 +5,12 @@
    "metadata": {},
    "source": [
     "# Who was protected by the first COVID-19 lockdown in England?\n",
+    "> A look at social deprivation and mortality rates across England during the first wave of the COVID-19 pandemic.\n",
     "\n",
-    "- categories: [COVID-19, data wrangling, data exploration]"
+    "- toc: false\n",
+    "- categories: [COVID-19, data wrangling, data exploration]\n",
+    "- author: David Beavan, Camila Rangel Smith, Sam Van Stroud, Kevin Xu \n",
+    "- image: images/story_previews/covid-19-first-lockdown.png"
    ]
   },
   {
